--- a/docs/css/creative.css
+++ b/docs/css/creative.css
@@ -16,7 +16,7 @@ body {
 
 hr {
     max-width: 50px;
-    border-color: #f05f40;
+    border-color: #3773d3;
     border-width: 3px;
 }
 
@@ -25,7 +25,7 @@ hr.light {
 }
 
 a {
-    color: #f05f40;
+    color: #3773d3;
     -webkit-transition: all .35s;
     -moz-transition: all .35s;
     transition: all .35s;
@@ -61,7 +61,7 @@ p {
 }
 
 .bg-primary {
-    background-color: #f05f40;
+    background-color: #3773d3;
 }
 
 .bg-dark {
@@ -98,7 +98,7 @@ aside {
     text-transform: uppercase;
     font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;
     font-weight: 700;
-    color: #f05f40;
+    color: #3773d3;
 }
 
 .navbar-default .navbar-header .navbar-brand:hover,
@@ -116,12 +116,12 @@ aside {
 
 .navbar-default .nav > li>a:hover,
 .navbar-default .nav>li>a:focus:hover {
-    color: #f05f40;
+    color: #3773d3;
 }
 
 .navbar-default .nav > li.active>a,
 .navbar-default .nav>li.active>a:focus {
-    color: #f05f40!important;
+    color: #3773d3!important;
     background-color: transparent;
 }
 
@@ -162,7 +162,7 @@ aside {
 
     .navbar-default.affix .navbar-header .navbar-brand {
         font-size: 14px;
-        color: #f05f40;
+        color: #3773d3;
     }
 
     .navbar-default.affix .navbar-header .navbar-brand:hover,
@@ -177,7 +177,7 @@ aside {
 
     .navbar-default.affix .nav > li>a:hover,
     .navbar-default.affix .nav>li>a:focus:hover {
-        color: #f05f40;
+        color: #3773d3;
     }
 }
 
@@ -332,7 +332,7 @@ header .header-content .header-content-inner p {
 }
 
 .text-primary {
-    color: #f05f40;
+    color: #3773d3;
 }
 
 .no-gutter > [class*=col-] {
@@ -394,9 +394,9 @@ fieldset[disabled] .btn-default.active {
 }
 
 .btn-primary {
-    border-color: #f05f40;
+    border-color: #3773d3;
     color: #fff;
-    background-color: #f05f40;
+    background-color: #3773d3;
     -webkit-transition: all .35s;
     -moz-transition: all .35s;
     transition: all .35s;
@@ -408,9 +408,9 @@ fieldset[disabled] .btn-default.active {
 .btn-primary:active,
 .btn-primary.active,
 .open > .dropdown-toggle.btn-primary {
-    border-color: #ed431f;
+    border-color: #4088f9;
     color: #fff;
-    background-color: #ee4b28;
+    background-color: #4088f9;
 }
 
 .btn-primary:active,
